fixing event catalog card gap

--- a/public/assets/css/events.css
+++ b/public/assets/css/events.css
@@ -67,9 +67,8 @@
     /* align-self: center; */
     /* border: 1px solid black; */
     flex-wrap: wrap;
-    /* margin-left: 1.3vw; */
 
-    gap: 10px;
+    /* gap: 10px; */
 }
 
 #section1{
@@ -80,7 +79,7 @@
 
 #result-container{
     /* border: 1px solid black; */
-    padding: 42px 80px 42px 120px;
+    padding: 42px 90px 42px 110px;
 }
 
 a.custom-card,
@@ -152,14 +151,14 @@ a.custom-card:hover {
 
 .carousel-inner{
     display: flex;
-    padding-left: 25px;
+    padding-left: 20px;
     margin-right: 20px;
 }
 
 .carousel-item, .carousel-item1{
     display: block;
     /* flex: 0 0 15%; */
-    margin-right: 60px;
+    margin-right: 10px;
 }
 
 .carousel-item1{
